--- a/ui/bio.twig
+++ b/ui/bio.twig
@@ -38,6 +38,6 @@
 
   <p>I'm looking for individual contributor roles. PHP/MySQL is the core of
   what I do best, but I'm comfortable with full-stack web development, Linux
-  system adminstration (including Docker), C/C++, and confident in my
-  abilities to jump into any tech stack and get up to speed quickly.</p>
+  system adminstration, C/C++, Docker, and confident in my abilities to jump
+  into any tech stack and get up to speed quickly.</p>
 </details>
