Add LinkedIn, contact info

--- a/ui/bio.twig
+++ b/ui/bio.twig
@@ -40,4 +40,9 @@
   what I do best, but I'm comfortable with full-stack web development, Linux
   system adminstration, C/C++, Docker, and confident in my abilities to jump
   into any tech stack and get up to speed quickly.</p>
+
+  <p><a href="https://www.linkedin.com/in/jimwinstead/">View my LinkedIn
+  profile</a> for some dates and details. And <a
+  href="mailto:jimw@trainedmonkey.com">contact me to discuss
+  opportunities</a>.</p>
 </details>
