--- a/ui/bio.twig
+++ b/ui/bio.twig
@@ -17,7 +17,7 @@
   <p>Through this time I was also involved in the open source community.  In
   college, I was involved in the very early days of Linux, and I took over
   maintenance from Linus of the "root" disk used to install Linux before
-  distributions. While workin on websites for Knowledge Adventure, I got
+  distributions. While working on websites for Knowledge Adventure, I got
   involved with the the <a href="https://www.php.net/">PHP project</a>, and
   became a founding member of the PHP Group. I helped set up and maintain some
   of the collaborative development infrastructure, including the mailing lists
