Add GitHub link, remove RMAS from sidebar

--- a/ui/bio.twig
+++ b/ui/bio.twig
@@ -42,7 +42,9 @@
   into any tech stack and get up to speed quickly.</p>
 
   <p><a href="https://www.linkedin.com/in/jimwinstead/">View my LinkedIn
-  profile</a> for some dates and details. And <a
-  href="mailto:jimw@trainedmonkey.com">contact me to discuss
+  profile</a> for some dates and details, and <a
+  href="https://www.github.com/jimwins">my GitHub profile</a> for some of my
+  open source contributions. <a
+  href="mailto:jimw@trainedmonkey.com">Contact me to discuss
   opportunities</a>.</p>
 </details>
